public/app/scss/index.scss
/* ... */
//bootstrap edited
.carousel-control-prev-icon {
  background-image: url("../img/view_figures/arrow.svg");
  transform: rotate(90deg)
}

//Generic cards

.generic-card {}

.generic-card__title {
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  color: #337ab7;
  margin: 10px 0;
}

.generic-card__description {
  font-size: 10pt;
  background: $grey-card;
  min-height: 470px;
}

.generic-card__list {
  list-style-type: none;
  margin: 0;
  padding: 0;

  li {
    margin-top: 10px;
  }
}

.generic-card__button {
  background-color: #7bcaea;
  border: none;
  color: #000;
  border-radius: 50px;
  font-family: 'Mali', cursive;
  padding: 6px 15px;
  text-transform: uppercase;
  margin: 0 10px;
}

.button-container {
  // width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.share-buttons {
  display: flex;
  justify-content: center;

  .share {
    width: 32px;
    height: 32px;
    display: block;
    text-indent: -999em;
    padding: 0;
    margin: 2rem 10px;

    &.share-facebook {
      background: url('/img/icons/share-facebook.png') no-repeat;
    }

    &.share-twitter {
      background: url('/img/icons/share-twitter.png') no-repeat;
    }

    &.share-linkedin {
      background: url('/img/icons/share-linkedin.png') no-repeat;
    }
  }
}

//CARDS

//blog card
.blog-card {
  box-shadow: 0px 18px 76px rgba(51, 51, 51, 0.1);
  border-radius: 8px;
  max-width: 350px !important;
  height: 530px;
  border: none;
  padding: 24px;
  z-index: 5;

  .card-meta {
    display: flex;
    flex-direction: column;
    gap: 0.15rem;
  }

  .image-container {
    padding-bottom: 24px;

    img {
      aspect-ratio: 7 / 3;
      width: 100%;
      border-radius: 8px;
      object-fit: cover
    }
  }

  .category-flag {
    position: absolute;
    top: 10px;
    right: 0px;
    width: 100%;

    border-radius: 4px;
    background-color: $primary-yellow;
    max-width: 120px;
    height: 29px;
    margin-left: 10px;
    font-style: normal;
    font-weight: 600;
    font-size: 60%;
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
  }


  .card-title {
    color: $black;
    font-weight: 700;
    font-size: 20px;
    line-height: 26px;
    margin-bottom: 8px;
  }

  .card-body {
    padding: 0;
  }

  .card-text {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 26px;
    font-feature-settings: 'pnum' on, 'lnum' on;
  }
}

.client-card {
  box-shadow: 0px 18px 76px rgba(51, 51, 51, 0.1);
  border-radius: 8px;
  max-width: 350px !important;
  height: 350px;
  border: none;
  padding: 24px;
  z-index: 5;

  .image-container {
    padding-bottom: 24px;

    img {
      aspect-ratio: 7 / 3;
      width: 100%;
      border-radius: 8px;
      object-fit: cover
    }
  }

  .card-title {
    color: $black;
    font-weight: 700;
    font-size: 20px;
    line-height: 26px;
    margin-bottom: 8px;
  }

  .card-body {
    padding: 0;
  }

  .categories {
    color: $grey;
    font-family: 'Degular';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 18px;
  }
}


.invidivual-author {}

.more-authors {
  position: relative;
  padding: 8px;
  cursor: pointer;
}

.more-authors__summary {
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.more-authors__chevron {
  font-size: 0.7rem;
  transition: transform 0.2s;
}

.more-authors:hover {
  .more-authors__popup {
    display: block !important;
  }

  .more-authors__chevron {
    transform: rotate(180deg);
  }
}

.more-authors__popup {
  display: none;
  padding: 10px 0;
  position: absolute;
  min-width: 200px;
  width: auto;
  top: 100%;
  left: 0;
  background-color: $white;
  border-radius: 8px;
  filter: drop-shadow(0px 18px 76px rgba(51, 51, 51, 0.1));
  z-index: 10;
}

//course card
.course-card {
  // width: 100% !important;
  width: 18rem;
  max-width: 260px;
  height: 600px;
  display: flex;
  flex-direction: column;
  padding: 24px 24px 30px;
  gap: 32px;
  isolation: isolate;
  box-shadow: 0px 18px 76px rgba(51, 51, 51, 0.1);
  border-radius: 8px;
  overflow: hidden;

  .card-title {
    font-family: "degular-text", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    line-height: 26px;
  }

  .categories {
    color: $grey;
    font-family: 'Degular';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 18px;
  }

  .body {
    flex: 1;
  }

  .subtitle {
    font-size: 14px;
  }

  .image-container {}

  .image {
    height: 140px;
  }

  .flags {
    position: absolute;
    top: 10px;
    right: 20px;
    width: 100%;
    display: flex;
    justify-content: end;

    div {
      border-radius: 4px;
      background-color: $primary-yellow;
      width: auto;
      max-width: 110px;
      height: 35px;
      max-height: 50px;
      margin-left: 10px;
      padding: 5px 5px;
      font-style: normal;
      font-weight: 700;
      font-size: 60%;
      line-height: 25px;
      display: flex;
      align-items: center;
      justify-content: center;
      border: none;

      img {
        width: 85%;
      }
    }
  }

  .items {
    // height: 100px;
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

  .item {
    font-style: normal;
    font-weight: 300;
    font-size: 16px;
    line-height: 32px;
  }

  .coupon-icon {
    position: absolute;
    top: -20px;
    left: -20px;
    height: 70px;
  }
}

.icon-card {
  height: 18px;
}
/* ... */

